syntax = "proto3";
package nebulix.storage.v1;

option go_package = "nebulix/x/storage/types";

// File defines the File message.
message File {
  string fid = 1;
  string merkle = 2;
  string creator = 3;
  string subscription = 4;
  string status = 5;
  int64 file_size = 6;
  int32 replicas = 7;
  repeated string providers = 8;
  int64 start = 9;
  int64 last_challenged_height = 10;
}
