syntax = "proto3";

package nebulix.storage.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "nebulix/storage/v1/params.proto";

option go_package = "nebulix/x/storage/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc RegisterProvider(MsgRegisterProvider) returns (MsgRegisterProviderResponse);
  rpc PostFile(MsgPostFile) returns (MsgPostFileResponse);

  // BuyStorage defines the BuyStorage RPC.
  rpc BuyStorage(MsgBuyStorage) returns (MsgBuyStorageResponse);

  // ProveFile defines the ProveFile RPC.
  rpc ProveFile(MsgProveFile) returns (MsgProveFileResponse);

  // DeleteFile defines the DeleteFile RPC.
  rpc DeleteFile(MsgDeleteFile) returns (MsgDeleteFileResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "nebulix/x/storage/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgRegisterProvider defines the MsgRegisterProvider message.
message MsgRegisterProvider {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string hostname = 2;
  int64 capacity = 3;
}

// MsgRegisterProviderResponse defines the MsgRegisterProviderResponse message.
message MsgRegisterProviderResponse {}

// MsgPostFile defines the MsgPostFile message.
message MsgPostFile {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string fid = 2;
  bytes merkle = 3;
  int64 file_size = 4;
  int32 replicas = 5;
  string subscription = 6;
}

// MsgPostFileResponse defines the MsgPostFileResponse message.
message MsgPostFileResponse {
  int64 start_block = 1;
}

// MsgBuyStorage defines the MsgBuyStorage message.
message MsgBuyStorage {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string receiver = 2;
  int64 duration = 3;
  int64 bytes = 4;
  bool is_default = 5;
}

// MsgBuyStorageResponse defines the MsgBuyStorageResponse message.
message MsgBuyStorageResponse {
  string SubscriptionId = 1;
}

// MsgProveFile defines the MsgProveFile message.
message MsgProveFile {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string challenge_id = 2;
  string fid = 3;
  bytes data = 4;
  repeated bytes hashes = 5;
  uint64 chunk = 6;
}

// MsgProveFileResponse defines the MsgProveFileResponse message.
message MsgProveFileResponse {}

// MsgDeleteFile defines the MsgDeleteFile message.
message MsgDeleteFile {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string file_id = 2;
}

// MsgDeleteFileResponse defines the MsgDeleteFileResponse message.
message MsgDeleteFileResponse {}
